cros: Fix long emails messing up Remove User button placement

The email label now uses the same layout rule as the user name label, which
fixes the same bug, but for long emails rather than long user names.

Bug: 902362
Change-Id: Icfde3129078ffd6a5977b388210bf2773e0ee405
Reviewed-on: https://chromium-review.googlesource.com/c/1334827
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#607864}(cherry picked from commit e500b19c0fd528deca7d476821bd62fb4307378d [formerly 96f5ccc36864e1cf5867211d7d0eea29fa2d7c80])
Reviewed-on: https://chromium-review.googlesource.com/c/1343052
Reviewed-by: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#764}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: 3f894edfe584757e548d9b49a8505195e80b845b